--- a/com.axiatadigitallabs.apitest/test-output/old/Default suite/classes.html
+++ b/com.axiatadigitallabs.apitest/test-output/old/Default suite/classes.html
@@ -15,15 +15,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_01_get_b</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>test01_put</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>test01_delete</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test_01_get</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
