--- a/com.axiatadigitallabs.apitest/test-output/old/Default suite/methods.html
+++ b/com.axiatadigitallabs.apitest/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>22/02/04 19:52:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test01_delete()[pri:3, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test01_delete</td> 
-  <td>main@1336996537</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>22/02/04 19:52:43</td>   <td>-16354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test01_post()[pri:0, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test01_post</td> 
-  <td>main@1336996537</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>22/02/04 19:52:46</td>   <td>-13601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test_01_get_b()[pri:1, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test_01_get_b</td> 
-  <td>main@1336996537</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>22/02/04 19:52:47</td>   <td>-12295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test01_put()[pri:2, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test01_put</td> 
-  <td>main@1336996537</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>22/02/04 23:21:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test01_post()[pri:0, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test01_post</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>22/02/04 23:22:01</td>   <td>11953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test01_delete()[pri:3, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test01_delete</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>22/02/04 23:21:56</td>   <td>7390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test01_put()[pri:2, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test01_put</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>22/02/04 23:21:55</td>   <td>6637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAPI_ALL.test_01_get()[pri:1, instance:com.axiatadigitallabs.apitest.TestAPI_ALL@4313f5bc]">test_01_get</td> 
+  <td>main@7967307</td>   <td></td> </tr>
 </table>
